update: correction of alignment issues

--- a/EstilosPrueba.css
+++ b/EstilosPrueba.css
@@ -9,8 +9,8 @@ header {
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
-    gap: 1em;
     padding: 1em;
+    gap: 1em;
     margin-bottom: 1em;
     background-color: black;
 }
@@ -18,8 +18,8 @@ header {
 .topbanner {
     display: flex;
     flex-direction: row;
-    gap: 10px;
-    padding: 20px;
+    gap: 1em;
+    padding: 1em;
     background-color: #2c4059;
 }
 
@@ -27,8 +27,8 @@ header {
     display: flex;
     flex-grow: 1;
     flex-direction: row;
-    gap: 10px;
-    padding: 10px;
+    gap: 1em;
+    padding: 1em;
     background-color: #ea5455;
 }
 
@@ -36,8 +36,8 @@ header {
     display: flex;
     flex-grow: 5;
     flex-direction: row;
-    gap: 10px;
-    padding: 10px;
+    gap: 1em;
+    padding: 1em;
     background-color: #ea5455;
 }
 
@@ -45,22 +45,22 @@ header {
     display: flex;
     flex-grow: 1;
     flex-direction: row;
-    gap: 10px;
-    padding: 10px;
+    gap: 1em;
+    padding: 1em;
     background-color: #ea5455;
 }
 .bottombanner {
     display: flex;
     flex-direction: column;
-    gap: 10px;
-    padding: 20px;
+    gap: 1em;
+    padding: 1em;
     background-color: #f98901;
 }
 .banner {
     display: flex;
     flex-direction: row;
-    gap: 10px;
-    padding: 1px;
+    gap: 1em;
+    padding: 1em;
     background-color: #fed700;
 }
 
@@ -68,66 +68,67 @@ main {
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
-    gap: 1em;
     padding: 1em;
+    gap: 1em;
     margin-bottom: 1em;
     background-color: black;
 }
 
 section {
-    gap: 10px;
+    gap: 1em;
 }
 
 .content {
-    display: flex;
-    flex-direction: row;
+    display: grid;
+    grid-template-columns: 3fr 1fr;
+    gap: 1em;
+    align-items: stretch;
 }
 
 .articles {
     flex: 3;
     display: grid;
     grid-template-columns: 1fr 1fr;
-    gap: 10px;
-    padding: 10px;
+    gap: 1em;
+    padding: 1em;
     background-color: #7f798d;
 }
 
 .article {
-    gap: 10px;
-    padding: 10px;
+    gap: 1em;
+    padding: 1em;
     background-color: #5f73f2;
 }
 
 .navigation {
     grid-column: span 2;  
     background-color: #84bdda;
-    padding:5px;
+    padding:1em;
         
 }
-
-.publi {
-    background-color: #ea5455;
-}
-
 .publicidad {
-    flex: 1;
     display: flex;
     flex-direction: column;
-    align-items: stretch;
-    padding: 10px;
+    gap: 1em;   
+    padding: 1em; 
+    height: 100%;
+    width: 100%;
+    box-sizing: border-box;
+    background-color: #ea5455;
 }
 
 .ad {
     background-color: #fed700;
     justify-content: top;
-    padding: 10px;
-    margin: 0 0 10px;
-    width: 100%; box-sizing: border-box;
+    gap:1em;
+    padding: 1em;
+    width: 100%;
+    box-sizing: border-box;
 }
 
 footer {
     display:flex;
-    flex-grow:1;
+    flex-grow:1em;
     padding: 1em;
     background-color: #f3e285;
 }
@@ -144,7 +145,7 @@ footer {
     }
 
     .content {
-        flex-direction: column;
+        grid-template-columns: 1fr;
     }
 
     .articles {
@@ -154,9 +155,9 @@ footer {
 
     .publicidad {
         display: flex;
-        justify-content: center; align-items: center;
         flex-direction: column;
-        gap: 10px;
+        gap: 1em;
+        align-items: stretch;
     }
 
     .ad {
